tgthrProgramManagement/force-app/main/default/objects/Signing_Request__c/Signing_Request__c.object-meta.xml
<CustomObject>
    <label>Signing Request</label>
    <pluralLabel>Signing Requests</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Signing Request Number</label>
        <displayFormat>SR-{00000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Persistent store for PWA signing requests. Tracks the lifecycle of signature requests from creation through completion, replacing the in-memory store.</description>
</CustomObject>