tgthrProgramManagement/force-app/main/default/objects/Signing_Request__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <type>Lookup</type>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Signing Requests</relationshipLabel>
    <relationshipName>SigningRequests</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>