tgthrProgramManagement/force-app/main/default/objects/Signing_Request__c/fields/Device_Attestation_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Device_Attestation_Accepted__c</fullName>
    <label>Device Attestation Accepted</label>
    <description>Whether the signer accepted the device attestation checkbox before signing</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>