tgthrProgramManagement/force-app/main/default/objects/Signing_Request__c/fields/Expires_At__c.field-meta.xml
<CustomField>
    <fullName>Expires_At__c</fullName>
    <label>Expires At</label>
    <description>Timestamp after which this signing request is no longer valid</description>
    <type>DateTime</type>
</CustomField>