tgthrProgramManagement/force-app/main/default/objects/Signing_Request__c/fields/Interaction_Summary_Id__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Summary_Id__c</fullName>
    <label>Interaction Summary Id</label>
    <description>InteractionSummary Id (standard object — stored as text since it cannot be a lookup to a standard healthcare object)</description>
    <type>Text</type>
    <length>18</length>
</CustomField>