tgthrProgramManagement/force-app/main/default/objects/Signing_Request__c/fields/Interview__c.field-meta.xml
<CustomField>
    <fullName>Interview__c</fullName>
    <label>Interview</label>
    <type>Lookup</type>
    <referenceTo>Interview__c</referenceTo>
    <relationshipLabel>Signing Requests</relationshipLabel>
    <relationshipName>SigningRequests</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>