tgthrProgramManagement/force-app/main/default/objects/Signing_Request__c/fields/Opened_At__c.field-meta.xml
<CustomField>
    <fullName>Opened_At__c</fullName>
    <label>Opened At</label>
    <description>Timestamp when the assignee first opened the signing request</description>
    <type>DateTime</type>
</CustomField>