tgthrProgramManagement/force-app/main/default/objects/Signing_Request__c/fields/Request_Id__c.field-meta.xml
<CustomField>
    <fullName>Request_Id__c</fullName>
    <label>Request Id</label>
    <description>Unique UUID identifying this signing request. Used as the external-facing token.</description>
    <type>Text</type>
    <length>36</length>
    <required>true</required>
    <externalId>true</externalId>
    <unique>true</unique>
    <caseSensitive>true</caseSensitive>
</CustomField>