tgthrProgramManagement/force-app/main/default/objects/Signing_Request__c/fields/Requested_At__c.field-meta.xml
<CustomField>
    <fullName>Requested_At__c</fullName>
    <label>Requested At</label>
    <description>Timestamp when the signing request was created</description>
    <type>DateTime</type>
    <required>true</required>
</CustomField>