tgthrProgramManagement/force-app/main/default/objects/Signing_Request__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <label>Requested By</label>
    <description>The staff user who initiated the signing request</description>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Signing Requests Created</relationshipLabel>
    <relationshipName>SigningRequestsCreated</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>