tgthrProgramManagement/force-app/main/default/objects/Signing_Request__c/fields/Requested_For__c.field-meta.xml
<CustomField>
    <fullName>Requested_For__c</fullName>
    <label>Requested For</label>
    <description>The user who is being asked to sign. For Client role, this is the staff user acting on behalf.</description>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Signing Requests Assigned</relationshipLabel>
    <relationshipName>SigningRequestsAssigned</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>