tgthrProgramManagement/force-app/main/default/objects/Signing_Request__c/fields/Requested_For_Role__c.field-meta.xml
<CustomField>
    <fullName>Requested_For_Role__c</fullName>
    <label>Requested For Role</label>
    <description>The signing role: Client, CaseManager, PeerSupport, Manager, Clinician</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Client</fullName><default>false</default><label>Client</label></value>
            <value><fullName>CaseManager</fullName><default>false</default><label>Case Manager</label></value>
            <value><fullName>PeerSupport</fullName><default>false</default><label>Peer Support</label></value>
            <value><fullName>Manager</fullName><default>false</default><label>Manager</label></value>
            <value><fullName>Clinician</fullName><default>false</default><label>Clinician</label></value>
            <value><fullName>Staff</fullName><default>false</default><label>Staff</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>