tgthrProgramManagement/force-app/main/default/objects/Signing_Request__c/fields/Signature_Content_Version_Id__c.field-meta.xml
<CustomField>
    <fullName>Signature_Content_Version_Id__c</fullName>
    <label>Signature Content Version Id</label>
    <description>Salesforce ContentVersion Id of the uploaded signature image</description>
    <type>Text</type>
    <length>18</length>
</CustomField>