tgthrProgramManagement/force-app/main/default/objects/Signing_Request__c/fields/Signed_At__c.field-meta.xml
<CustomField>
    <fullName>Signed_At__c</fullName>
    <label>Signed At</label>
    <description>Timestamp when the signature was completed</description>
    <type>DateTime</type>
</CustomField>