tgthrProgramManagement/force-app/main/default/objects/Signing_Request__c/fields/Target_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Target_Record_Id__c</fullName>
    <label>Target Record Id</label>
    <description>Salesforce Id of the record being signed (Interview__c, InteractionSummary, etc.)</description>
    <type>Text</type>
    <length>18</length>
    <required>true</required>
</CustomField>