tgthrProgramManagement/force-app/main/default/objects/Signing_Request__c/fields/Target_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Target_Record_Type__c</fullName>
    <label>Target Record Type</label>
    <description>API name of the target object (e.g. Interview__c, InteractionSummary)</description>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
</CustomField>