tgthrProgramManagement/force-app/main/default/objects/Signing_Request__c/fields/Witness_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Witness_Confirmed__c</fullName>
    <label>Witness Confirmed</label>
    <description>Whether the authenticated staff member confirmed they witnessed the client sign on the device</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>