tgthrProgramManagement/force-app/main/default/objects/Signing_Request__c/fields/Witness_Confirmed_At__c.field-meta.xml
<CustomField>
    <fullName>Witness_Confirmed_At__c</fullName>
    <label>Witness Confirmed At</label>
    <description>Timestamp when the authenticated staff member confirmed they witnessed the client signature</description>
    <type>DateTime</type>
</CustomField>