tgthrProgramManagement/force-app/main/default/objects/Signing_Request__c/fields/Witness_User__c.field-meta.xml
<CustomField>
    <fullName>Witness_User__c</fullName>
    <label>Witness User</label>
    <description>The authenticated staff user who witnessed the client signing on the device</description>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Signing Requests Witnessed</relationshipLabel>
    <relationshipName>SigningRequestsWitnessed</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>